--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node index.ts",
-    "migration:generate": "npm run typeorm migration:generate  -- -d ./migrations -n",
+    "build": "tsc --build",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
     "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop",
-    "build": "tsc --build"
+    "migrate": "ts-node ./node_modules/typeorm/cli.js schema:drop && ts-node ./node_modules/typeorm/cli.js schema:sync && ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "schema:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "npm run typeorm migration:generate  -- -d database/migrations -n"
   },
   "author": "",
   "license": "ISC",
