--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "node index.ts",
+    "start": "node dist/index.js" ,
     "dev": "nodemon --exec ts-node index.ts",
     "build": "tsc --build",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
