--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "node dist/index.js" ,
+    "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node index.ts",
     "build": "tsc --build",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "express-extract-routes": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
