--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "express-extract-routes": "^2.0.0",
+    "googleapis": "^105.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.4",
+    "mysql2": "^3.13.0",
     "mysqldump": "^3.2.0",
     "reflect-metadata": "^0.1.14",
-    "typeorm": "0.2.29",
+    "typeorm": "^0.3.21",
     "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
